# LatentAudio

./: LICENSE-INTENT.md  README.md  pyproject.toml  requirements.txt
scripts/: PTH2PT.py  README.md  analyze_audio.py  benchmark_inference.py  check_health.py  cleanup_silent_files.py  debug_model.py  deep_clean_v2.py  deep_clean_v3.py  diagnose_data.py  export_for_vst.py  identify_latent_attributes.py  polish_model.py  preflight_check.py  prepare_dataset.py  prune_model.py  stress_test_hd.py  summarize_logs.py  test_pruned_models.py  test_walk_geometry.py  verify_annealing.py  verify_skip_connections.py  verify_upgrade.py
src/latentaudio/: __init__.py  cli.py  config.py  logging.py  types.py  validator.py
src/latentaudio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/latentaudio/core/: __init__.py  generator.py  losses.py  simple_vae.py  training.py  vae.py
src/latentaudio/explorer/: __init__.py  attributes.py  interpolator.py  preset.py  projector.py  walker.py
src/latentaudio/ui/: __init__.py  app.py  theme.py
src/latentaudio/ui/dialogs/: __init__.py  training.py
src/latentaudio/ui/tabs/: __init__.py  attributes.py  morph.py  presets.py  reconstruction.py  variations.py  walk.py
src/latentaudio/ui/widgets/: __init__.py  controls.py  latent_sliders.py  sound_map.py  visualizer.py
